# OpenNS-discord

./: README.md  keygen.py  migrate.py  openNS-discord.ini  pyproject.toml  requirements.txt  runner.py  setup.py
src/openNS/: commands.py  discordbot.py  greet.py  hello.py  ping.py  telegram.py  verify.py
